--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
 # OpenPoke Configuration
 # Copy this file to .env and fill in your API keys
 
-# Required: OpenRouter API key for LLM access
-# Get your key from https://openrouter.ai/
-OPENROUTER_API_KEY=your_openrouter_api_key_here
-
 # Required: Composio API key and Gmail auth config ID
 # Get these from https://composio.dev/
 COMPOSIO_API_KEY=your_composio_api_key_here
 COMPOSIO_GMAIL_AUTH_CONFIG_ID=your_gmail_auth_config_id_here
+
+# Optional: Ollama host (defaults to http://localhost:11434)
+# OLLAMA_HOST=http://localhost:11434
 
 # Optional: Server configuration
 # OPENPOKE_HOST=0.0.0.0
